footer spacing fixed in mobil

--- a/src/containers/Contact/contact.css
+++ b/src/containers/Contact/contact.css
@@ -20,9 +20,11 @@ flex-direction: column;
 align-items: center;
 margin: 0 4rem;
 
+
 }
+
 .app__contact-content-call h1{
-    
+    line-height: 100%;
     font-size: 20px;
 }
 
@@ -34,7 +36,7 @@ margin: 0 4rem;
     margin: 0 4rem;
 }
 .app__contact-content-email h1{
-    
+    line-height: 100%;
     font-size: 20px;
 }
 .app__contact-content-linkedin{
@@ -65,6 +67,7 @@ margin: 0 4rem;
 @media screen and (max-width: 978px){
     .app__contact-content{
         flex-direction: column;
+        
     }
 
    .app__contact-content-call{
@@ -73,10 +76,12 @@ margin: 0 4rem;
    } 
    .app__contact-content-email{
     margin: 0 1rem;
+    padding: 1rem;
 
    } 
    .app__contact-content-github{
     margin: 0 1rem;
+    padding-bottom: 1rem;
 
    } 
    .app__contact-content-linkedin{
